<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:title="@string/drawer_home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/drawer_party"
            android:checked="true"
            android:title="@string/drawer_party"
            android:icon="@drawable/ic_cake_black_24dp"/>
        <item
            android:id="@+id/drawer_friends"
            android:checked="true"
            android:title="@string/drawer_friends"
            android:icon="@drawable/ic_face_black_24dp"/>
        <item
            android:id="@+id/section"
            android:title="@string/drawer_section">
            <menu>
                <item
                    android:id="@+id/drawer_user"
                    android:title="@string/drawer_user"
                    android:icon="@drawable/ic_account_circle_black_24dp"/>
                <item
                    android:id="@+id/drawer_settings"
                    android:title="@string/drawer_settings"
                    android:icon="@drawable/ic_settings_black_24dp"/>
                <item
                    android:id="@+id/drawer_about"
                    android:title="@string/drawer_about"
                    android:icon="@drawable/ic_info_black_24dp"/>
            </menu>
        </item>
    </group>
</menu>