<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="14dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="?attr/actionBarSize">

        <android.support.v7.widget.CardView
            android:id="@+id/party_recommendation_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_small"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:id="@+id/party_recommendation_image"
                    android:src="@drawable/profile_placeholder_3"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/party_recommendation_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@id/party_recommendation_image"
                    android:layout_marginStart="15dp"
                    android:id="@+id/card_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/party_recommendation_message"
                    android:layout_toEndOf="@id/party_recommendation_image"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/card_title" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:theme="@style/RedMaterialButton"
            android:id="@+id/party_panic_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/party_panic_btn"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/party_notification_title"
            android:id="@+id/party_notification_title"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:letterSpacing=".3"
            android:layout_below="@id/party_recommendation_cv"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@android:id/list"
            android:layout_below="@id/party_notification_title"
            android:layout_above="@id/party_panic_btn"
            android:divider="@null"/>

    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>