<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="14dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="?attr/actionBarSize">

        <android.support.v7.widget.CardView
            android:id="@+id/newparty_top_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_small"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/card_right"
                    android:src="@drawable/ic_cake_black_24dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newparty_intro_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toStartOf="@id/card_right"
                    android:id="@+id/card_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newparty_intro_message"
                    android:layout_toStartOf="@id/card_right"
                    android:layout_below="@id/card_title"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:theme="@style/GreenMaterialButton"
            android:id="@+id/newparty_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/newparty_start_btn"
            android:layout_marginBottom="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_alignParentBottom="true"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_small"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_below="@id/newparty_top_cv" >

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newparty_invite_friends"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:id="@+id/newparty_friends_title"/>

                <FrameLayout
                    android:id="@+id/newparty_friends_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>